# Olorin

./: AGENTS.md  AGENTS_CURRENT_TASK.md  Cargo.toml  README.md  audit.txt
.github/workflows/: squalr-tests-pr.yml
squalr/: Cargo.toml
squalr-android/: Cargo.toml
squalr-android/src/: lib.rs
squalr-cli/src/: cli.rs  main.rs
squalr-engine/: Cargo.toml
squalr-engine-api/: API_SURFACE_INVENTORY.md  Cargo.toml
squalr-engine-api/src/: lib.rs
squalr-engine-api/tests/: api_contract_memory_compatibility.rs  api_contract_process_compatibility.rs  api_contract_project_compatibility.rs  api_contract_project_items_compatibility.rs  api_contract_scan_compatibility.rs  api_contract_scan_results_compatibility.rs  api_contract_settings_compatibility.rs  api_contract_trackable_tasks_compatibility.rs
squalr-engine-domain/: Cargo.toml
squalr-engine-domain/src/: lib.rs
squalr-engine-memory/: Cargo.toml
squalr-engine-processes/: Cargo.toml
squalr-engine-scanning/: Cargo.toml
squalr-engine-session/: Cargo.toml
squalr-engine-session/src/: engine_privileged_state.rs  lib.rs
squalr-engine-session/src/logging/: log_dispatcher.rs
squalr-engine-session/src/os/: mod.rs
squalr-engine/src/: engine_initialization_error.rs  engine_privileged_state.rs  lib.rs  squalr_engine.rs
squalr-installer/: Cargo.toml  build.rs
squalr-installer/src/: app.rs  installer_runtime.rs  logging.rs  main.rs  theme.rs
squalr-operating-system/: Cargo.toml
squalr-tests/: Cargo.toml
squalr-tests/src/: lib.rs
squalr-tests/tests/: command_response_tests.rs  memory_command_tests.rs  (+8 more)
(+161 files in other folders)
