#![feature(profile-rustflags)]

[workspace]
members = [
    "squalr-tests",
    "squalr-engine-api",
    "squalr-engine-domain",
    "squalr-engine",
    "squalr-engine-memory",
    "squalr-engine-processes",
    "squalr-engine-projects",
    "squalr-engine-scanning",
    "squalr-android",
    "squalr-cli",
    "squalr-tui",
    "squalr-installer",
    "squalr",
]
resolver = "3"

[profile.release]

[profile.release-with-debug]
inherits = "release"
debug = true
