[package]
name = "squalr-engine-session"
version = "0.1.0"
authors = ["Zachary Canann"]
edition = "2024"

[dependencies]
squalr-engine-api = { path = "../squalr-engine-api" }
squalr-operating-system = { path = "../squalr-operating-system" }
anyhow = "1.0.101"
dirs = "6.0.0"
log = "0.4.29"
log4rs = "1.4.0"
sysinfo = "0.38.0"
